@@ -13,6 +13,7 @@
 7. When re-show group volume dialog use any previous volumes as defaults, to
    improve initial display.
 8. Add release-type specific icons.
+9. When shrinking jumplist remove keys with fewest items.
 
 4.3.4
 -----
